[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Effects/unnamed.png" type="Texture" id=1]
[ext_resource path="res://Items/SpacialItems/Giorno'sPiano/Jojo_Ef.gd" type="Script" id=2]
[ext_resource path="res://Items/SpacialItems/Giorno'sPiano/yt2mp3info-giorno-s-theme-easy-to-expert-but-128kbps_wLyOL5DN.mp3" type="AudioStream" id=3]

[node name="jojo_Ef" type="Node2D"]
position = Vector2( -504, -282 )
scale = Vector2( 1.62595, 1.72995 )
z_index = 100
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 89, 188 )
scale = Vector2( 0.234375, 0.195313 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 291, 74 )
scale = Vector2( 0.194397, 0.150162 )
texture = ExtResource( 1 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 50, 13 )
scale = Vector2( 0.322266, 0.251953 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 255.5, 316 )
scale = Vector2( 0.173828, 0.144531 )
texture = ExtResource( 1 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 429.5, 271 )
scale = Vector2( 0.197266, 0.148438 )
texture = ExtResource( 1 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 542, 70 )
scale = Vector2( 0.234375, 0.195313 )
texture = ExtResource( 1 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 555.5, 322.5 )
scale = Vector2( 0.130859, 0.107422 )
texture = ExtResource( 1 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 86.1033, 314.459 )
scale = Vector2( 0.171242, 0.140558 )
texture = ExtResource( 1 )

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( 381.451, -22.3988 )
scale = Vector2( 0.11959, 0.110075 )
texture = ExtResource( 1 )

[node name="Sprite10" type="Sprite" parent="."]
position = Vector2( 423.751, 149.715 )
scale = Vector2( 0.171242, 0.136042 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
